src/test/ui/rust-unstable-column-gated.stderr
error[E0658]: use of unstable library feature '__rust_unstable_column': internal implementation detail of the `column` macro
  --> $DIR/rust-unstable-column-gated.rs:2:20
   |
LL |     println!("{}", __rust_unstable_column!());
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(__rust_unstable_column)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
